Solucion muchos errores, metodos bien implementados, parte de admin acabada y mas cosas